# docker-shop

./: README.md  docker-compose.yml  docker-compose.yml.save
redis_data/: dump.rdb
redis_db/: Dockerfile  module.json
redish-tide/: .env  Cargo.toml  Dockerfile
redish-tide/src/: main.rs  router.rs  state.rs  students.rs
