[package]
name = "redish-tide"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tide = "0.16.0"
async-std = { version = "1.8.0", features = ["attributes"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "*"
redis = { version = "*", features = ["json"] }
async-redis-session = "0.2.2"
dotenv = "0.15.0"
redis-derive = "0.1.6"
